# verivault

./: .gitignore  Cargo.toml  README.md  client.md  deployment_guide.md  flow.md  sepolia_flow.md  slides_export.md  technical_architecture.md  vc_pitch.md
aggregator/: Cargo.toml
aggregator/src/: main.rs
chain/: docker-compose.yml
contracts/: foundry.toml
contracts/broadcast/Deploy.s.sol/31337/: run-1765888655768.json  run-latest.json
contracts/broadcast/DeploySepolia.s.sol/11155111/: run-latest.json
contracts/broadcast/DeploySepolia.s.sol/31337/: run-1765890833391.json
contracts/cache/: solidity-files-cache.json
contracts/cache/DeploySepolia.s.sol/11155111/: run-1765891934510.json
contracts/script/: Deploy.s.sol  DeploySepolia.s.sol
contracts/src/: Vault.sol
core/: Cargo.toml
core/src/: fuzz_tests.rs  lib.rs
guest/: Cargo.toml
guest/src/: main.rs
host/: Cargo.toml
host/data/: generated_trade.json  valid_trade.json
host/src/: main.rs
operator/: Cargo.toml
operator/src/: main.rs
scripts/: run_demo_traffic.sh
web/: README.structure.md  next.config.mjs  package-lock.json  package.json
web/abi/: Vault.ts  deployments.json
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/components/dashboard/: DemoControls.tsx  OperatorCard.tsx  PanicBtn.tsx  SolvencyStats.tsx  TradeFeed.tsx  ZKCard.tsx
web/components/modals/: ProofModal.tsx
web/components/ui/: dialog.tsx
web/config/: wagmi.ts
web/lib/: store.ts
web/lib/hooks/: useVault.ts
