[package]
name = "verivault-host"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "5.2.4"
verivault-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
sp1-build = "5.2.4"
